--- a/SimpleBudget/SimpleBudget.App/App.xaml
+++ b/SimpleBudget/SimpleBudget.App/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="SimpleBudget.App"
+﻿<Application x:Class="SimpleBudget.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SimpleBudget.App"
