--- a/SimpleBudget/SimpleBudget.App/View/MainWindow.xaml
+++ b/SimpleBudget/SimpleBudget.App/View/MainWindow.xaml
@@ -2,22 +2,23 @@
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+         xmlns:viewmodels="clr-namespace:SimpleBudget.App.ViewModel"
          Title="SimpleBudget"
-         Height="350" Width="525">
+         Height="800" Width="600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <DataGrid Name="dataGrid" Grid.Row="0" AlternatingRowBackground="Brown" AlternationCount="2" AutoGenerateColumns="False">
+        <DataGrid ItemsSource="{Binding Records}" Name="DataGrid" Grid.Row="0" AlternatingRowBackground="LightGray" AlternationCount="2" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Group" Binding="{Binding Group}" />
                 <DataGridTextColumn Header="Income" Binding="{Binding Type}" />
-                <DataGridTextColumn Header="Amount" Binding="{Binding Amount}" />
+                <DataGridTextColumn Header="Amount" Binding="{Binding Amount, Converter={StaticResource localAmountConverter}}" />
                 <DataGridCheckBoxColumn Header="Periodic" Binding="{Binding Periodic}" />
                 <DataGridTextColumn Header="Comment" Binding="{Binding Comment}" />
+                <DataGridTextColumn Header="Day" Binding="{Binding Date, StringFormat={}\{0:dd\}}" />
             </DataGrid.Columns>
         </DataGrid>
-        <Button Grid.Row="1" Name="SaveIncomeButton"  Content="Save" HorizontalAlignment="Left" Click="SaveIncomeButton_Click"/>
     </Grid>
 </Controls:MetroWindow>
