Adding ViewModel locator

--- a/SimpleBudget/SimpleBudget.App/App.xaml
+++ b/SimpleBudget/SimpleBudget.App/App.xaml
@@ -7,6 +7,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <converter:AmountConverter x:Key="localAmountConverter"></converter:AmountConverter>
+            <local:ViewModelLocator x:Key="viewModelLocator"></local:ViewModelLocator>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
